--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-nap",
   "version": "0.2.1",
   "description": "Enable or disable app nap for your app, from Node",
-  "main": "index.js",
+  "main": "AppNap.js",
   "os": [
     "darwin"
   ],
